# ultimate-fastapi-sqlmodel

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  database.sqlite  prestart.sh  pyproject.toml  run.sh  tests-start.sh
.github/workflows/: release.yaml  test.yml
app/: backend_pre_start.py  initial_data.py  main.py  tests_pre_start.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: items.py  login.py  users.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/exec_scripts/: prestart.py
app/models/: item.py  user.py
app/schemas/: __init__.py  item.py  token.py  user.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_items.py  test_login.py  test_users.py
app/tests/crud/: test_item.py  test_user.py
app/tests/utils/: item.py  user.py  utils.py
scripts/: format-imports.sh  format.sh  lint.sh  test.sh
